integration-tests/src/test-cases/parse-error-invalid-let-syntax/expected
parse error: from "test-cases/parse-error-invalid-let-syntax/input", line 2:
|   f = fn x -> x;
|     ^
|
+-> Syntax error: while parsing pattern, unexpected ' ' while expecting ':'

